--- a/.shopifyignore
+++ b/.shopifyignore
@@ -1,5 +1,3 @@
-# OS generated files #
-######################
 .DS_Store
 .DS_Store?
 ._*
@@ -8,3 +6,6 @@
 ehthumbs.db
 Thumbs.db
 node_modules
+package.json
+package-lock.json
+yarn.lock
