--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,12 @@
 {
   "printWidth": 120,
   "singleQuote": true,
+  "trailingComma": "none",
+  "plugins": [
+    "@shopify/prettier-plugin-liquid",
+    "prettier-plugin-tailwindcss"
+  ],
+  "tailwindFunctions": ["tw"],
   "overrides": [
     {
       "files": "*.liquid",
