--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
     "autoprefixer": "^10.4.14",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.25",
+    "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "vite": "^4.4.2",
-    "vite-plugin-copy": "^0.1.6"
+    "vite-plugin-static-copy": "^0.16.0"
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
+    "alpinejs": "^3.12.3",
     "swiper": "^10.0.4",
     "tailwindcss": "^3.3.3",
     "tailwindcss-base-font-size": "^1.0.0"
