--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@shopify/prettier-plugin-liquid": "^1.2.2",
     "autoprefixer": "^10.4.14",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.25",
+    "postcss": "^8.4.27",
+    "postcss-import": "^15.1.0",
+    "postcss-nested": "^6.0.1",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
-    "vite": "^4.4.2",
+    "vite": "^4.4.7",
     "vite-plugin-static-copy": "^0.17.0"
   },
   "dependencies": {
